# clickup-mcp-server

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  server.py
.github/workflows/: test.yml
tests/: conftest.py  test_server.py
