[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-mcp-server"
version = "1.0.0"
description = "MCP server for managing ClickUp tasks from Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["server"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
]

[project.scripts]
clickup-mcp-server = "server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=server --cov-report=term-missing --cov-fail-under=100"
